<resources>
    <string name="app_name">myPassword</string>
    <string name="action_settings">Settings</string>

    <string name="welcome_text">Welcome to myPassword!</string>
    <string name="enter_app_pw_string">Enter your App Password</string>

   // password list activity
    <string name="title_activity_password_list">passwordList</string>


    //add password dialog
    <string name="title_activity_add_password_entry">addPasswordEntry</string>
    <string name="add_password_text">About to add a new Password Entry</string>
    <string name="display_name_label">Display Name</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="info_label">Info</string>
    <string name="add_btn_text">Add</string>
    <string name="cancel_btn_text">Cancel</string>

</resources>
