<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    >

    <TextView
        android:id="@+id/addPasswordText"
        android:text="@string/add_password_text"
        android:textSize="@dimen/headline1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/display_name_label"
        app:layout_constraintTop_toBottomOf="@id/addPasswordText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/username_label"
        app:layout_constraintTop_toBottomOf="@id/displayName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_label"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textLongMessage"
        android:hint="@string/info_label"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <RelativeLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/info"
        app:layout_constraintRight_toRightOf="parent"
        >

        <Button
            android:id="@+id/addBtn"
            android:text="@string/add_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/btnBackground"
            />

        <Button
            android:id="@+id/cancelBtn"
            android:text="@string/cancel_btn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/addBtn"
            android:layout_toRightOf="@id/addBtn"
            android:background="@color/btnBackground"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>